--- a/easycomponent/src/component/tab/index.css
+++ b/easycomponent/src/component/tab/index.css
@@ -1,23 +1,37 @@
 .tab_title_wrap{
 	width: 300px;
 	height: 40px;
+	position:relative;
 }
 .tab_title{
 	width: 100px;
 	height: 40px;
 	text-align: center;
-	line-height: 40px;
-	color: #FFF;
-	background-color: #0EFF26;
+	line-height: 38px;
+	color: #000;
 	display: inline-block;
 }
 .active{
-	color: #FFF;
-	background-color: #FF260E;
+	color: #1890ff;
+}
+.select_item{
+	background-color: #1890ff;
+	width:100px;
+	height:2px;
+	position: absolute;
+	bottom:2px;
+	transition: left .3s ease;
 }
 .tab_item_wrap{
 	width: 300px;
 	height: 300px;
+	overflow: hidden;
+}
+.tab_item_wrap1{
+	width: 900px;
+	height: 300px;
+	display:flex;
+	transition: margin-left .3s ease;
 }
 .tab_item{
 	width: 300px;
@@ -25,17 +39,14 @@
 	text-align: center;
 	line-height: 300px;
 	color: #FFF;
-	display: none;
+	flex: 1 0 auto;
 }
 .tab_item:nth-of-type(1){
-	background-color: #FF660E;
+	color: #FF660E;
 }
 .tab_item:nth-of-type(2){
-	background-color: #FF0E52;
+	color: #FF0E52;
 }
 .tab_item:nth-of-type(3){
-	background-color: #07D739;
-}
-.show{
-	display: block;
+	color: #07D739;
 }
