docs: add dailog

--- a/easycomponent/src/component/balloon/index.css
+++ b/easycomponent/src/component/balloon/index.css
@@ -20,3 +20,9 @@
     left:50%;
     top: calc(100% - 4px);
 }
+.balloon_container{
+    position: absolute;
+    top:0;
+    left:0;
+    width:100%;
+}
